# tsla-sentiment-news-agent

./: .cursorrules  .gitignore  CLI_USAGE.md  COMMIT_MESSAGE.md  EMAIL_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  demo_quick.sh  demo_video.sh  env.example  pyproject.toml  run_full_workflow.sh  test_quick.sh
.cursor/plans/: ts-0675dae3.plan.md
.cursor/rules/: browser-use-rule.mdc
app/adapters/: browser_client.py  n8n_twitter_source.py  news_sources.py  reddit_source.py  supabase_client.py  twitter_source.py
app/cli/: __init__.py  fetch_news.py  generate_report.py  reddit_sentiment.py  run_once.py  send_email.py  twitter_sentiment.py
app/domain/: schemas.py  taxonomy.py  validators.py
app/infra/: __init__.py  config.py  logging.py  telemetry.py
app/services/: __init__.py  classifier.py  collector.py  email_generator.py  email_service.py  planner.py  reasoner.py  scorer.py  (+3 more)
docs/: AI_ASSISTANT_SETUP.md  AI_Powered_Stock_Sentiment_Design_Doc.md  BROWSER_USE_PATTERNS.md  DATABASE_TEST_RESULTS.md  MIGRATION_GUIDE.md  REDDIT_SUCCESS_SUMMARY.md  REPORT_GENERATION_GUIDE.md  SUPABASE_SETUP.md
examples/: 01_basic_search.py  02_session_caching.py  03_structured_extraction.py  04_add_new_platform.py  QUICK_REFERENCE.md  README.md
migrations/: 001_create_sentiment_analysis_table.sql  001_create_tables.sql  002_create_twitter_sentiment_table.sql  003_create_reddit_sentiment_table.sql
templates/: email_notification.html  news_report.html  news_report.md
tests/: test_domain_schemas.py  test_news_fetch_live.py  test_news_sources.py  test_supabase_integration.py
