[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsla-sentiment-news-agent"
version = "0.1.0"
description = "Tesla stock news and sentiment analysis agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Leo Gao"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "supabase>=2",
    "python-dotenv>=1.0",
    "rich>=13",
    "typer[all]>=0.12",
    "browser-use>=0.1.14",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "coverage>=7.4",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

